tests/invalid/MissingSemicolon.java
class MissingSemicolon {
    int x
    int y;
}
